# Olio-ohjelmat

./: README.md
Viikkkotehtavat2_2olioarvauspeli/: game.cpp  game.h  main.cpp
Viikkotehvat2_1olioarvauspeli/: CMakeLists.txt
build-Viikkkotehtavat2_2olioarvauspeli-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release
build-Viikkotehvat2_1olioarvauspeli-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/: CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-viikkotehtava3_3chef-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release
build-viikkotehtava4_1_pankkitili-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release
build-viikkotehtava5_2_seuraajat-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release
build-viikkotehtava6_1_-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release
build-viikkotehtava7_1laskin-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  ui_mainwindow.h
build-viikkotehtava7_2laskin2-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  ui_mainwindow.h
viikkotehtava1_1arvauspeli/: CMakeLists.txt  main.cpp
viikkotehtava3_3chef/: chef.cpp  chef.h  italianchef.cpp  italianchef.h  main.cpp
viikkotehtava4_1_pankkitili/: asiakas.cpp  asiakas.h  luottotili.cpp  luottotili.h  main.cpp  pankkitili.cpp  pankkitili.h
viikkotehtava5_2_seuraajat/: main.cpp  notifikaattori.h  seuraaja.cpp
viikkotehtava6_1_/: main.cpp  student.cpp  student.h
(+68 files in other folders)
